--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <title>Hello Phoenix!</title>
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/phoenix.css">
   </head>
 
   <body>
