--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="/css/phoenix.css">
     <script src="/js/jquery-1.11.1.js" type="text/javascript"></script>
     <script src="/js/phoenix.js" type="text/javascript"></script>
+    <script src="/js/three.min.js" type="text/javascript"></script>
+    <script src="/js/OBJLoader.js" type="text/javascript"></script>
     <script src="/js/app.js" type="text/javascript"></script>
   </head>
 
